secops/uptimekuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: uptime-kuma
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: uptime-kuma
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: http
  type: ClusterIP
